TAG: genotypeload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) genotypeload.config.default: Don't override MAIL_LOG_PROC

TAG: genotypeload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: genotypeload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: genotypeload-tr11750-BP
DATE: 05/20/2015
STAFF: kstone

TAG: genotypeload-5-1-1-2
TAG: genotypeload-5-1-1-1
TAG: genotypeload-5-1-0-3
TAG: genotypeload-5-1-0-2
TAG: genotypeload-5-1-0-1
DATE: 09/12/2012-12/20/2012
STAFF: lec
CHANGES:
1) TR10273/new genotype load
